--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -8,8 +8,6 @@ on:
 jobs:
   docker:
     runs-on: ubuntu-latest
-    env:
-      VERSION: 1
     steps:
       -
         name: Set up Docker Buildx
@@ -21,11 +19,9 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       -
-        name: Increment version
-        run: echo "VERSION=$((VERSION + 1))" >> $GITHUB_ENV
-      -
         name: Build and push
         uses: docker/build-push-action@v4
         with:
           push: true
-          tags: trollfaceiv/dockercicd:${{ env.VERSION }}
+          tags: trollfaceiv/dockercicd:latest
+      
